# cafe_management_system

./: .env.example  .gitignore  README.md  pyproject.toml
authentication/: admin.py  decorators.py  models.py  tasks.py  urls.py  views.py
cms_app/: admin.py  decorators.py  models.py  urls.py  views.py
cms_manager_app/: apps.py  urls.py  views.py
cms_project/: settings.py  urls.py
static/authentication/css/: grocery-login-style.css
static/cms_app/css/: cms-style.css
static/custom-tools/: custom-tools.css
templates/authentication/: base.html  login.html  reset-email.html  reset-password.html
templates/cms_app/: base.html  index.html
templates/cms_manager_app/: base.html  manager-index.html
templates/email/: password-reset-mail.html  password-reset-success.html  welcome-email.html
