[tool.poetry]
name = "cafe-management-system"
version = "0.1.0"
description = ""
authors = ["Rajeshkumar-14 <Rajeshrk233444@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.1"
django-environ = "^0.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
